opt-in configurable jwt authentication
